# aimethods-labs

./: pyproject.toml
lab01/: .gitignore  __main__.py  api.py  main.py  requirements.txt  utils.py
lab02/: __main__.py  main.py  model_infer.py
lab02/assets/: A.txt  B.txt
lab02/results/: A.txt  B.txt
lab04/: __main__.py  bot.py  convert.py  intents.py  llm.py  localllmformat.py  oai.py  prompt.py  utils.py
