[project]
name = "aimethods-labs"
version = "0.1.0"
description = "AI Methods labs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.16.0",
    "aiohttp>=3.11.10",
    "asyncio>=3.4.3",
    "exllamav2",
    "loguru>=0.7.3",
    "numpy>=2.2.0",
    "openai>=1.58.1",
    "opencv-python>=4.10.0.84",
    "pillow>=11.0.0",
    "requests>=2.32.3",
    "torch>=2.5.1",
    "transformers>=4.47.0",
]

[tool.uv.sources]
exllamav2 = { url = "https://github.com/turboderp/exllamav2/releases/download/v0.2.6/exllamav2-0.2.6+cu121.torch2.5.0-cp312-cp312-win_amd64.whl" }
